# nemesis

./: .gitignore  LICENSE  README.md  ROADMAP.md  pyproject.toml
.cursor/rules/: architecture.mdc  docs.mdc  python.mdc  security.mdc
nemesis/: __init__.py  main.py
nemesis/agents/: __init__.py  analyst.py  executor.py  llm_client.py  orchestrator.py  planner.py
nemesis/agents/orchestration/: __init__.py  callbacks.py  chain_suggester.py  command_router.py  confirmation_gate.py  llm_chat.py  plan_bootstrap.py  plan_runtime.py  response.py  session_manager.py  step_executor.py  tool_runner.py
nemesis/agents/specialized/: __init__.py  base.py  enumeration.py  ffuf.py  nuclei.py  recon.py  scanning.py  vulnerability.py
nemesis/core/: __init__.py  config.py  logging_config.py  plan_writer.py  project.py  report_builder.py  report_export.py  wordlists.py
nemesis/db/: __init__.py  database.py  models.py
nemesis/tools/: __init__.py  agent_allowlist.py  base.py  kali_tools.yml
nemesis/tui/: app.py  theme.tcss
nemesis/tui/screens/: finding_detail.py  home.py  load_project.py  main.py  new_project.py  plan_approval.py  report.py  (+2 more)
plans/: plan1.md  plan2.md  plan3.md  plan4.md  plan5.md  plan6.md
scripts/: update_kali_manifest.py
tests/: __init__.py  conftest.py  test_agent_allowlist.py  test_finding_attacker_vector_fields.py  test_kali_control_parser.py  test_scope_validation.py  test_tool_manifest.py
tests/orchestration/: __init__.py  test_chain_suggester.py  test_command_router.py  test_confirmation_gate.py  test_llm_chat.py  test_orchestrator_facade.py  test_plan_runtime.py  test_step_executor.py  test_tool_runner.py
(+8 files in other folders)
