[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nemesis"
version = "0.1.0"
description = "AI-assisted penetration testing co-pilot"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["penetration-testing", "security", "ai", "cybersecurity", "pentest"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "textual>=0.80.0",
    "litellm>=1.50.0",
    "aiosqlite>=0.20.0",
    "rich>=13.9.0",
    "pyfiglet>=1.0.2",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
nemesis = "nemesis.main:run"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "textual-dev>=0.80.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["nemesis"]
